--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@klaytn/contract-template",
+  "name": "dnft-example",
   "version": "0.0.1",
   "description": "This template provides a template for contract development and operation, including tools and conventions. These are recommended and not mendatory. If you have a suggestion, please make a PR to the template.",
   "repository": {
@@ -40,24 +40,42 @@
   ],
   "devDependencies": {
     "@klaytn/ethers-ext": "^0.9.0-beta",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@typechain/ethers-v5": "^10.2.1",
+    "@typechain/hardhat": "^6.1.6",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "chai": "^4.3.8",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-node": "^11.1.0",
     "hardhat": "^2.13.0",
     "hardhat-deploy": "^0.11.25",
+    "hardhat-gas-reporter": "^1.0.9",
     "husky": "^8.0.3",
     "prettier": "^2.8.7",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
+    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
+    "typechain": "^8.3.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@klaytn/contracts": "^1.0.6",
     "@klaytn/hardhat-utils": "^0.0.9",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "hardhat-shorthand": "^1.0.0"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
